--- a/themes/inhabitent/sass/_fonts.scss
+++ b/themes/inhabitent/sass/_fonts.scss
@@ -1,3 +1,7 @@
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
+
+body {
+    font-size: 40px;
+}
