--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -672,6 +672,39 @@ object {
 body {
   font-size: 16px; }
 
+/**
+*grid for Latest adventure
+*/
+.latest-adventures ul {
+  display: grid;
+  grid-template-columns: 250px 250px 250px 250px;
+  grid-template-rows: 250px 250px;
+  grid-gap: 1em;
+  background-color: #7cb5f5; }
+
+.latest-adventures li {
+  line-height: 1;
+  overflow: hidden;
+  position: relative;
+  width: 100%; }
+
+.latest-adventures ul li:nth-child(1) {
+  grid-row: 1 / 3;
+  grid-column: 1 /3;
+  background-color: aquamarine; }
+
+.latest-adventures ul li:nth-child(2) {
+  grid-row: 1 / 2;
+  grid-column: 3 /5; }
+
+.entry-title {
+  margin: 1.5rem;
+  position: absolute;
+  z-index: 2; }
+
+/**
+*grid for Latest adventure
+*/
 .home {
   min-width: 1120px; }
 
@@ -690,14 +723,16 @@ body {
   font-size: 1.5rem;
   margin-right: .5rem; }
 
-.site-info {
+li {
+  list-style-type: none; }
+
+.site-info,
+h2,
+h3 {
   text-transform: uppercase; }
 
 .footer-blocks h3 {
   text-transform: uppercase; }
-
-.footer#colophon.site-footer {
-  background-image: url(inhabitent/assets/images/dark-wood@2x.png) no-repeat center; }
 
 .site-footer {
   background: url(../../assets/images/dark-wood.png);
