--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: inhabitent
 Theme URI: http://underscores.me/
-Author: RED Academy
+Author: Daniel Hamidi
 Author URI: http://www.redacademy.com
 Description: A WordPress starter theme for RED Academy students.
 Version: 1.0.0
@@ -678,6 +678,12 @@ object {
 /* Front page */
 body {
   font-size: 16px; }
+
+.home-banner {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0, rgba(0, 0, 0, 0.4)), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
+  background-size: cover;
+  height: 100vh; }
 
 /**
 *grid for Latest adventure
