--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -65,6 +65,12 @@ body {
     font-size: 16px;
 }
 
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1120px;
+}
+
 .home-banner {
     background: linear-gradient(180deg, rgba(0, 0, 0, .4) 0, rgba(0, 0, 0, .4)), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
     background-size: cover;
@@ -78,7 +84,7 @@ body {
 
 .latest-adventures ul {
     display: grid;
-    grid-template-columns: 250px 250px 250px 250px;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 250px 250px;
     grid-gap: 1em;
     background-color: rgb(124, 181, 245);
@@ -112,10 +118,6 @@ body {
 /**
 *grid for Latest adventure
 */
-
-.home {
-    min-width: 1120px;
-}
 
 .product-info .container {
     margin-left: 60px;
@@ -153,4 +155,9 @@ h3 {
     background: url(../../assets/images/dark-wood.png);
     background-size: 512px 512px;
     color: #fff;
+}
+
+.footer-blocks {
+    display: flex;
+    justify-content: space-between;
 }
