updating css as sass and some other changes

--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -30,3 +30,5 @@ Courier,
 monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+$url_0: url(../../assets/images/home-hero.jpg);
+$url_1: url(../../assets/images/dark-wood.png);
