--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -65,6 +65,7 @@ body {
     font-size: 16px;
 }
 
+//urls
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -72,56 +73,42 @@ body {
 }
 
 .home-banner {
-    background: linear-gradient(180deg, rgba(0, 0, 0, .4) 0, rgba(0, 0, 0, .4)), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
+    background: linear-gradient(180deg, rgba(0, 0, 0, .4) 0, rgba(0, 0, 0, .4) 0), #969696 $url_0 no-repeat top;
     background-size: cover;
     height: 100vh;
 }
 
-
-/**
-*grid for Latest adventure
-*/
-
-.latest-adventures ul {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 250px 250px;
-    grid-gap: 1em;
-    background-color: rgb(124, 181, 245);
-}
-
-.latest-adventures li {
-    line-height: 1;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-}
-
-.latest-adventures ul li:nth-child(1) {
-    grid-row: 1 / 3;
-    grid-column: 1 /3;
-    background-color: aquamarine;
-}
-
-.latest-adventures ul li:nth-child(2) {
-    grid-row: 1 / 2;
-    grid-column: 3 /5;
+.latest-adventures {
+    ul {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 250px 250px;
+        grid-gap: 1em;
+        background-color: rgb(223, 245, 124);
+        li {
+            &:nth-child(1) {
+                grid-row: 1 / 3;
+                grid-column: 1 /3;
+                background-color: rgb(197, 72, 166);
+            }
+            &:nth-child(2) {
+                grid-row: 1 / 2;
+                grid-column: 3 /5;
+            }
+        }
+    }
+    li {
+        line-height: 1;
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+    }
 }
 
 .entry-title {
     margin: 1.5rem;
     position: absolute;
     z-index: 2;
-}
-
-
-/**
-*grid for Latest adventure
-*/
-
-.product-info .container {
-    margin-left: 60px;
-    margin-right: 60px;
 }
 
 .fa-phone {
@@ -131,7 +118,11 @@ body {
     -ms-transform: rotateY(180deg);
 }
 
-.fab,
+.fab {
+    font-size: 1.5rem;
+    margin-right: .5rem;
+}
+
 .fas {
     font-size: 1.5rem;
     margin-right: .5rem;
@@ -141,23 +132,33 @@ li {
     list-style-type: none;
 }
 
-.site-info,
-h2,
+.site-info {
+    text-transform: uppercase;
+}
+
+h2 {
+    text-transform: uppercase;
+}
+
 h3 {
     text-transform: uppercase;
-}
-
-.footer-blocks h3 {
-    text-transform: uppercase;
-}
-
-.site-footer {
-    background: url(../../assets/images/dark-wood.png);
-    background-size: 512px 512px;
-    color: #fff;
 }
 
 .footer-blocks {
     display: flex;
     justify-content: space-between;
+    h3 {
+        text-transform: uppercase;
+    }
+}
+
+.site-footer {
+    background: $url_1;
+    background-size: 512px 512px;
+    color: white;
+}
+
+.product-info .container {
+    margin-left: 60px;
+    margin-right: 60px;
 }
