--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -225,9 +225,6 @@ th {
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
-body {
-  font-size: 40px; }
-
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
@@ -685,20 +682,24 @@ body {
   width: 1120px; }
 
 .home-banner {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0, rgba(0, 0, 0, 0.4)), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.4)), color-stop(0, rgba(0, 0, 0, 0.4))), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0, rgba(0, 0, 0, 0.4) 0), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
   background-size: cover;
   height: 100vh; }
 
-/**
-*grid for Latest adventure
-*/
 .latest-adventures ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 250px 250px;
   grid-gap: 1em;
-  background-color: #7cb5f5; }
+  background-color: #dff57c; }
+  .latest-adventures ul li:nth-child(1) {
+    grid-row: 1 / 3;
+    grid-column: 1 /3;
+    background-color: #c548a6; }
+  .latest-adventures ul li:nth-child(2) {
+    grid-row: 1 / 2;
+    grid-column: 3 /5; }
 
 .latest-adventures li {
   line-height: 1;
@@ -706,26 +707,10 @@ body {
   position: relative;
   width: 100%; }
 
-.latest-adventures ul li:nth-child(1) {
-  grid-row: 1 / 3;
-  grid-column: 1 /3;
-  background-color: aquamarine; }
-
-.latest-adventures ul li:nth-child(2) {
-  grid-row: 1 / 2;
-  grid-column: 3 /5; }
-
 .entry-title {
   margin: 1.5rem;
   position: absolute;
   z-index: 2; }
-
-/**
-*grid for Latest adventure
-*/
-.product-info .container {
-  margin-left: 60px;
-  margin-right: 60px; }
 
 .fa-phone {
   -webkit-transform: rotateY(180deg);
@@ -733,7 +718,10 @@ body {
   -o-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg); }
 
-.fab,
+.fab {
+  font-size: 1.5rem;
+  margin-right: .5rem; }
+
 .fas {
   font-size: 1.5rem;
   margin-right: .5rem; }
@@ -741,18 +729,14 @@ body {
 li {
   list-style-type: none; }
 
-.site-info,
-h2,
+.site-info {
+  text-transform: uppercase; }
+
+h2 {
+  text-transform: uppercase; }
+
 h3 {
   text-transform: uppercase; }
-
-.footer-blocks h3 {
-  text-transform: uppercase; }
-
-.site-footer {
-  background: url(../../assets/images/dark-wood.png);
-  background-size: 512px 512px;
-  color: #fff; }
 
 .footer-blocks {
   display: -webkit-box;
@@ -761,3 +745,14 @@ h3 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+  .footer-blocks h3 {
+    text-transform: uppercase; }
+
+.site-footer {
+  background: url(../../assets/images/dark-wood.png);
+  background-size: 512px 512px;
+  color: white; }
+
+.product-info .container {
+  margin-left: 60px;
+  margin-right: 60px; }
