--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -322,7 +322,8 @@ hr {
 
 ul,
 ol {
-  margin: 0 0 1.5rem 3rem; }
+  margin-left: 0px;
+  padding-left: 0px; }
 
 ul {
   list-style: disc; }
@@ -330,22 +331,11 @@ ul {
 ol {
   list-style: decimal; }
 
-li > ul,
-li > ol {
-  margin-bottom: 0;
-  margin-left: 1.5rem; }
-
 dt {
   font-weight: bold; }
 
 dd {
   margin: 0 1.5rem 1.5rem; }
-
-img {
-  height: auto;
-  /* Make sure images are scaled correctly. */
-  max-width: 100%;
-  /* Adhere to container width. */ }
 
 table {
   margin: 0 0 1.5rem;
@@ -686,7 +676,27 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background-color: red; }
+  background-color: #a1b62a; }
+
+.nav-search-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.search-submit {
+  background: transparent;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none; }
+  .search-submit:hover {
+    border-color: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none; }
+
+input[type=search] {
+  border: none;
+  border-radius: 0;
+  background: transparent; }
 
 .main-navigation {
   clear: both;
@@ -723,27 +733,39 @@ body {
   grid-template-rows: 250px 250px;
   grid-gap: 1em;
   background-color: #dff57c; }
-  .latest-adventures ul li:nth-child(1) {
-    grid-row: 1 / 3;
-    grid-column: 1 /3;
-    background-color: #c548a6; }
-  .latest-adventures ul li:nth-child(2) {
-    grid-row: 1 / 2;
-    grid-column: 3 /5; }
-
-.latest-adventures li {
-  line-height: 1;
-  overflow: hidden;
-  position: relative; }
-  .latest-adventures li img {
-    left: 50%;
-    max-height: 620px;
-    max-width: none;
-    position: absolute;
-    top: 75%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    width: auto; }
+  .latest-adventures ul li {
+    line-height: 1;
+    overflow: hidden;
+    position: relative; }
+    .latest-adventures ul li:nth-child(1) {
+      grid-row: 1 / 3;
+      grid-column: 1 /3;
+      background-color: #c548a6; }
+      .latest-adventures ul li:nth-child(1) img {
+        -webkit-transform: translate(-50%, -75%);
+                transform: translate(-50%, -75%);
+        left: 50%;
+        max-height: 540px;
+        max-width: none;
+        position: absolute;
+        top: 49%;
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        width: auto; }
+    .latest-adventures ul li:nth-child(2) {
+      grid-row: 1 / 2;
+      grid-column: 3 /5; }
+      .latest-adventures ul li:nth-child(2) img {
+        -webkit-transform: translate(-50%, -75%);
+                transform: translate(-50%, -75%);
+        left: 50%;
+        max-height: 460px;
+        max-width: none;
+        position: absolute;
+        top: 38%;
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        width: auto; }
 
 .adventure-title {
   margin: 1.5rem;
@@ -775,7 +797,8 @@ li {
 .site-info,
 h2,
 h3 {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  white-space: nowrap; }
 
 .footer-blocks {
   display: -webkit-box;
