--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -69,7 +69,27 @@ body {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    background-color: red;
+    background-color: rgb(161, 182, 42);
+}
+
+.nav-search-wrapper {
+    display: flex;
+}
+
+.search-submit {
+    background: transparent;
+    border: none;
+    box-shadow: none;
+    &:hover {
+        border-color: transparent;
+        box-shadow: none;
+    }
+}
+
+input[type=search] {
+    border: none;
+    border-radius: 0;
+    background: transparent;
 }
 
 .main-navigation {
@@ -114,25 +134,34 @@ body {
                 grid-row: 1 / 3;
                 grid-column: 1 /3;
                 background-color: rgb(197, 72, 166);
+                img {
+                    transform: translate(-50%, -75%);
+                    left: 50%;
+                    max-height: 540px;
+                    max-width: none;
+                    position: absolute;
+                    top: 49%;
+                    transform: translate(-50%, -50%);
+                    width: auto;
+                }
             }
             &:nth-child(2) {
                 grid-row: 1 / 2;
                 grid-column: 3 /5;
+                img {
+                    transform: translate(-50%, -75%);
+                    left: 50%;
+                    max-height: 460px;
+                    max-width: none;
+                    position: absolute;
+                    top: 38%;
+                    transform: translate(-50%, -50%);
+                    width: auto;
+                }
             }
-        }
-    }
-    li {
-        line-height: 1;
-        overflow: hidden;
-        position: relative;
-        img {
-            left: 50%;
-            max-height: 620px;
-            max-width: none;
-            position: absolute;
-            top: 75%;
-            transform: translate(-50%, -50%);
-            width: auto;
+            line-height: 1;
+            overflow: hidden;
+            position: relative;
         }
     }
 }
@@ -174,6 +203,7 @@ li {
 h2,
 h3 {
     text-transform: uppercase;
+    white-space: nowrap;
 }
 
 .footer-blocks {
