--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -69,7 +69,21 @@ body {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    background-color: rgb(161, 182, 42);
+}
+
+.site-title {
+    overflow: hidden;
+    height: 1px;
+    widows: 1px;
+}
+
+.site-branding .logo img {
+    height: auto;
+    margin: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 50px;
+    margin-top: 36px;
 }
 
 .nav-search-wrapper {
@@ -96,23 +110,47 @@ input[type=search] {
     clear: both;
     display: block;
     width: auto;
+    margin-left: auto;
     li {
         float: left;
         padding-left: 1.5rem;
         position: relative;
     }
+    a {
+        color: white;
+    }
+}
+
+.site-header {
+    font-family: Novecento Sans Web, sans-serif;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px #323232;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
 }
 
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1120px;
+    max-width: 1120px;
+    // height: 70px;
+    // position: absolute;
 }
 
 .home-banner {
     background: linear-gradient(180deg, rgba(0, 0, 0, .4) 0, rgba(0, 0, 0, .4) 0), #969696 $url_0 no-repeat top;
     background-size: cover;
     height: 100vh;
+    img {
+        position: absolute;
+        margin: auto;
+        top: 12rem;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
 }
 
 .product-type-block-wrapper {
