--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -225,6 +225,51 @@ th {
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
+@font-face {
+  font-family: 'Merriweather';
+  src: url("../../assets/fonts/Merriweather-BoldItalic.eot");
+  src: url("../../assets/fonts/Merriweather-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Merriweather-BoldItalic.woff2") format("woff2"), url("../../assets/fonts/Merriweather-BoldItalic.woff") format("woff"), url("../../assets/fonts/Merriweather-BoldItalic.ttf") format("truetype"), url("../../assets/fonts/Merriweather-BoldItalic.svg") format("svg");
+  font-weight: bold;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url("../../assets/fonts/Merriweather-LightItalic.eot");
+  src: url("../../assets/fonts/Merriweather-LightItalic.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Merriweather-LightItalic.woff2") format("woff2"), url("../../assets/fonts/Merriweather-LightItalic.woff") format("woff"), url("../../assets/fonts/Merriweather-LightItalic.ttf") format("truetype"), url("../../assets/fonts/Merriweather-LightItalic.svg") format("svg");
+  font-weight: 300;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url("../../assets/fonts/Merriweather-Light.eot");
+  src: url("../../assets/fonts/Merriweather-Light.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Merriweather-Light.woff2") format("woff2"), url("../../assets/fonts/Merriweather-Light.woff") format("woff"), url("../../assets/fonts/Merriweather-Light.ttf") format("truetype"), url("../../assets/fonts/Merriweather-Light.svg") format("svg");
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url("../../assets/fonts/Merriweather-Bold.eot");
+  src: url("../../assets/fonts/Merriweather-Bold.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Merriweather-Bold.woff2") format("woff2"), url("../../assets/fonts/Merriweather-Bold.woff") format("woff"), url("../../assets/fonts/Merriweather-Bold.ttf") format("truetype"), url("../../assets/fonts/Merriweather-Bold.svg") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
+/*
+* Novecentos
+*/
+@font-face {
+  font-family: 'Novecentos';
+  src: url("../../assets/fonts/Novecentos-Normal.eot");
+  src: url("../../assets/fonts/Novecentos-Normal.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Novecentos-Normal.woff2") format("woff2"), url("../../assets/fonts/Novecentos-Normal.woff") format("woff"), url("../../assets/fonts/Novecentos-Normal.ttf") format("truetype"), url("../../assets/fonts/Novecentos-Normal.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Novecentos';
+  src: url("../../assets/fonts/Novecentos-DemiBold.eot");
+  src: url("../../assets/fonts/Novecentos-DemiBold.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Novecentos-DemiBold.woff2") format("woff2"), url("../../assets/fonts/Novecentos-DemiBold.woff") format("woff"), url("../../assets/fonts/Novecentos-DemiBold.ttf") format("truetype"), url("../../assets/fonts/Novecentos-DemiBold.svg") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
@@ -599,6 +644,18 @@ a {
 .bypostauthor {
   display: block; }
 
+.journal-entries li {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em; }
+
+.seperate-entries img {
+  width: 360px;
+  height: auto; }
+
+.seperate-entries h2 {
+  font-size: 0.5em; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -675,8 +732,20 @@ body {
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #a1b62a; }
+          justify-content: space-between; }
+
+.site-title {
+  overflow: hidden;
+  height: 1px;
+  widows: 1px; }
+
+.site-branding .logo img {
+  height: auto;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 50px;
+  margin-top: 36px; }
 
 .nav-search-wrapper {
   display: -webkit-box;
@@ -701,22 +770,41 @@ input[type=search] {
 .main-navigation {
   clear: both;
   display: block;
-  width: auto; }
+  width: auto;
+  margin-left: auto; }
   .main-navigation li {
     float: left;
     padding-left: 1.5rem;
     position: relative; }
+  .main-navigation a {
+    color: white; }
+
+.site-header {
+  font-family: Novecento Sans Web, sans-serif;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px #323232;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0; }
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1120px; }
+  max-width: 1120px; }
 
 .home-banner {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.4)), color-stop(0, rgba(0, 0, 0, 0.4))), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0, rgba(0, 0, 0, 0.4) 0), #969696 url(../../assets/images/home-hero.jpg) no-repeat top;
   background-size: cover;
   height: 100vh; }
+  .home-banner img {
+    position: absolute;
+    margin: auto;
+    top: 12rem;
+    left: 0;
+    right: 0;
+    bottom: 0; }
 
 .product-type-block-wrapper {
   display: -webkit-box;
