adding loop for retriving shop stuff dynamically

--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -651,7 +651,7 @@ a {
 
 .seperate-entries img {
   width: 360px;
-  height: auto; }
+  height: 245px; }
 
 .seperate-entries h2 {
   font-size: 0.5em; }
