--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -9,7 +9,7 @@ $color__background-hr: #ccc;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
-$color__link: royalblue;
+$color__link: #4169e1;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
 $color__green-brand: #248A83;
