--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -134,8 +134,6 @@ input[type=search] {
     margin-left: auto;
     margin-right: auto;
     max-width: 1120px;
-    // height: 70px;
-    // position: absolute;
 }
 
 .home-banner {
@@ -246,7 +244,7 @@ h3 {
 
 .footer-blocks {
     letter-spacing: 1px;
-    font-family: 'Merriweather', Courier, monospace;
+    font-family: 'Merriweather', Courier, serif;
     display: flex;
     justify-content: space-between;
     h3 {
@@ -270,7 +268,59 @@ h3 {
     margin-right: 60px;
 }
 
+.product-type-blocks {
+    display: grid;
+    grid-gap: 1.4em;
+    grid-template-columns: repeat(4, 1fr);
+    img {
+        width: 70px;
+    }
+}
+
 .text-logo img {
     height: 50px;
     margin-top: 50px;
+}
+
+.btn-green {
+    background: #248a83;
+    border: none;
+    border-radius: 0;
+    color: #fff;
+    cursor: pointer;
+    font-family: 'Novecento', sans-serif;
+    font-size: 14.4px;
+    font-size: .9rem;
+    line-height: 1;
+    padding: .75rem 1.5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    min-width: 145px;
+    max-width: 145px;
+}
+
+.product-type-block-wrapper {
+    display: grid;
+    border: 1px solid #e1e1e1;
+    border-top-width: 5px;
+    max-width: 100%;
+    padding: .75rem;
+    font-family: 'Merriweather', Courier, serif;
+    justify-items: center;
+}
+
+.shop-stuff>h2 {
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 2.4rem;
+    font-weight: 400;
+}
+
+.big-title {
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 2.4rem;
+    font-weight: 400;
 }
