--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -285,14 +285,19 @@ textarea {
   line-height: 1.5; }
 
 /* Headings */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   clear: both; }
 
 /* Copy */
-p {
-  margin-bottom: 1.5rem; }
-
-dfn, cite, em, i {
+dfn,
+cite,
+em,
+i {
   font-style: italic; }
 
 blockquote {
@@ -312,16 +317,21 @@ pre {
   overflow: auto;
   padding: 1.6rem; }
 
-code, kbd, tt, var {
+code,
+kbd,
+tt,
+var {
   font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
   font-size: 15px;
   font-size: 0.9375rem; }
 
-abbr, acronym {
+abbr,
+acronym {
   border-bottom: 1px dotted #666;
   cursor: help; }
 
-mark, ins {
+mark,
+ins {
   background: #fff9c0;
   text-decoration: none; }
 
@@ -890,7 +900,7 @@ h3 {
 
 .footer-blocks {
   letter-spacing: 1px;
-  font-family: 'Merriweather', Courier, monospace;
+  font-family: 'Merriweather', Courier, serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -913,6 +923,52 @@ h3 {
   margin-left: 60px;
   margin-right: 60px; }
 
+.product-type-blocks {
+  display: grid;
+  grid-gap: 1.4em;
+  grid-template-columns: repeat(4, 1fr); }
+  .product-type-blocks img {
+    width: 70px; }
+
 .text-logo img {
   height: 50px;
   margin-top: 50px; }
+
+.btn-green {
+  background: #248a83;
+  border: none;
+  border-radius: 0;
+  color: #fff;
+  cursor: pointer;
+  font-family: 'Novecento', sans-serif;
+  font-size: 14.4px;
+  font-size: .9rem;
+  line-height: 1;
+  padding: .75rem 1.5rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  min-width: 145px;
+  max-width: 145px; }
+
+.product-type-block-wrapper {
+  display: grid;
+  border: 1px solid #e1e1e1;
+  border-top-width: 5px;
+  max-width: 100%;
+  padding: .75rem;
+  font-family: 'Merriweather', Courier, serif;
+  justify-items: center; }
+
+.shop-stuff > h2 {
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  font-size: 2.4rem;
+  font-weight: 400; }
+
+.big-title {
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  font-size: 2.4rem;
+  font-weight: 400; }
