adding some css for bottons and some positioning

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -2,4 +2,20 @@
 # Page Templates
 --------------------------------------------------------------*/
 
+
 /* Front page */
+
+// The main content section
+.archive,
+.blog {
+    .content-area {
+        width: 74%;
+        display: inline-block;
+    }
+    // The Sidebar
+    .widget-area {
+        width: 25%;
+        display: inline-block;
+        vertical-align: top;
+    }
+}
