--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -18,6 +18,7 @@ $color__orange-brand: #d99054;
 $color__yellow-brand: #f0e4d1;
 $color__light-grey-brand: #a1a1a1;
 $color__medium-grey-brand: #808080;
+$color__btn-green-hover:#19625d;
 // Typography
 $font__main: sans-serif;
 $font__code: Monaco,
