--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -66,3 +66,17 @@
 .seperate-entries h2 {
     font-size: 0.5em;
 }
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1120px;
+}
+
+.big-title {
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 2.4rem;
+    font-weight: 400;
+}
