--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -6,14 +6,14 @@
 /* Links */
 
 a {
-    color: $color__background-body;
+    color: #fff;
     &:visited {
-        color: $color__link-visited;
+        color: #fff;
     }
     &:hover,
     &:focus,
     &:active {
-        color: $color__link-hover;
+        color: #fff;
     }
     &:focus {
         outline: thin dotted;
