--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -63,10 +63,6 @@
     height: 245px;
 }
 
-.seperate-entries h2 {
-    font-size: 0.5em;
-}
-
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -79,4 +75,25 @@
     margin-bottom: 60px;
     font-size: 2.4rem;
     font-weight: 400;
+}
+
+.btn-black {
+    border: 1px solid #000;
+    width: 160px;
+    height: 40px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.btn-black a {
+    color: #000;
+    text-align: center;
+    display: block;
+    height: auto;
+}
+
+.entry-content {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1120px;
 }
