--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -60,10 +60,34 @@ input[type=search] {
 }
 
 .site-header {
-    text-transform: uppercase;
-    text-shadow: 1px 1px 2px #323232;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
+    a {
+        color: blue;
+    }
+    .logo-white {
+        display: none;
+    }
+    .logo-green {
+        display: block;
+    }
+}
+
+.home,
+.page-template-about {
+    .site-header {
+        text-transform: uppercase;
+        text-shadow: 1px 1px 2px #323232;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        a {
+            color: white;
+        }
+        .logo-white {
+            display: block;
+        }
+        .logo-green {
+            display: none;
+        }
+    }
 }
