--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -63,12 +63,6 @@
     height: 245px;
 }
 
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1120px;
-}
-
 .big-title {
     text-align: center;
     margin-top: 60px;
@@ -92,7 +86,7 @@
     height: auto;
 }
 
-.entry-content {
+.content-area {
     margin-left: auto;
     margin-right: auto;
     max-width: 1120px;
