--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -663,11 +663,6 @@ a {
   width: 360px;
   height: 245px; }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1120px; }
-
 .big-title {
   text-align: center;
   margin-top: 60px;
@@ -688,7 +683,7 @@ a {
   display: block;
   height: auto; }
 
-.entry-content {
+.content-area {
   margin-left: auto;
   margin-right: auto;
   max-width: 1120px; }
@@ -757,23 +752,10 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.archive,
-.blog {
+.site-main .content-area {
   margin-left: auto;
   margin-right: auto;
   max-width: 1120px; }
-  .archive .content-area,
-  .blog .content-area {
-    width: 74%;
-    display: inline-block;
-    border-right: solid 1px black;
-    background: #d4f7cb; }
-  .archive .widget-area,
-  .blog .widget-area {
-    width: 25%;
-    display: inline-block;
-    vertical-align: top;
-    background: #aad2f3; }
 
 .copy-right {
   position: relative;
