--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -1,4 +1,4 @@
-.site-header .container {
+.site-header .content-whole {
     align-items: center;
     display: flex;
     justify-content: space-between;
