--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -6,24 +6,30 @@
 /* Front page */
 
 // The main content section
-// .archive,
-// .blog {
-//     .content-area {
-//         width: 74%;
-//         display: inline-block;
-//         border-right: solid 1px black;
-//         background: rgb(212, 247, 203);
-//     }
-//     // The Sidebar
-//     .widget-area {
-//         width: 25%;
-//         display: inline-block;
-//         vertical-align: top;
-//         background: rgb(170, 210, 243);
-//     }
-// }
-.site-main .content-area {
+.archive,
+.blog {
+    .content-area {
+        width: 74%;
+        display: inline-block;
+        border-right: solid 1px black;
+        background: rgb(212, 247, 203);
+    }
+    // The Sidebar
+    .widget-area {
+        width: 25%;
+        display: inline-block;
+        vertical-align: top;
+        background: rgb(170, 210, 243);
+    }
+}
+
+.site-main .content-whole {
     margin-left: auto;
     margin-right: auto;
     max-width: 1120px;
+}
+
+.hentry .entry-title {
+    color: white;
+    font-size: 60px;
 }
