--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -15,7 +15,8 @@ html {
 }
 
 body {
-    background: $color__background-body;
+    background: rgb(172, 172, 172);
+    // background: $color__background-body;
     /* Fallback for when there is no custom background color defined. */
 }
 
