styling About page

--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -165,14 +165,13 @@ li {
     list-style-type: none;
 }
 
-.site-info,
-h2,
-h3 {
-    text-transform: uppercase;
-    white-space: nowrap;
-    font-family: 'Novecentos', sans-serif;
-}
-
+// .site-info,
+// h2,
+// h3 {
+//     text-transform: uppercase;
+//     white-space: nowrap;
+//     font-family: 'Novecentos', sans-serif;
+// }
 .product-info .container {
     margin-left: 60px;
     margin-right: 60px;
