--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -29,7 +29,27 @@
     max-width: 1120px;
 }
 
-.hentry .entry-title {
-    color: white;
-    font-size: 60px;
+#post-23 {
+    h1 {
+        color: white;
+        font-size: 3rem;
+        font-weight: 700;
+        margin: 0;
+        position: absolute;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .entry-content {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1120px;
+        padding-left: 160px;
+        padding-right: 160px;
+        font-family: 'Merriweather', Courier, serif;
+        h2 {
+            text-align: center;
+            font-size: 2rem;
+        }
+    }
 }
