--- a/themes/inhabitent/sass/_typography.scss
+++ b/themes/inhabitent/sass/_typography.scss
@@ -23,6 +23,9 @@ h4,
 h5,
 h6 {
     clear: both;
+    text-transform: uppercase;
+    font-family: 'Novecento', sans-serif;
+    letter-spacing: 2px;
 }
 
 
