--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -291,7 +291,10 @@ h3,
 h4,
 h5,
 h6 {
-  clear: both; }
+  clear: both;
+  text-transform: uppercase;
+  font-family: 'Novecento', sans-serif;
+  letter-spacing: 2px; }
 
 /* Copy */
 dfn,
@@ -696,10 +699,6 @@ a {
     width: 260px;
     height: auto; }
 
-.hentry {
-  margin: 0 0 1.5rem;
-  background: lightblue; }
-
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -783,9 +782,27 @@ object {
   margin-right: auto;
   max-width: 1120px; }
 
-.hentry .entry-title {
+#post-23 h1 {
   color: white;
-  font-size: 60px; }
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 0;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+
+#post-23 .entry-content {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1120px;
+  padding-left: 160px;
+  padding-right: 160px;
+  font-family: 'Merriweather', Courier, serif; }
+  #post-23 .entry-content h2 {
+    text-align: center;
+    font-size: 2rem; }
 
 .copy-right {
   position: relative;
@@ -1010,13 +1027,6 @@ body {
 
 li {
   list-style-type: none; }
-
-.site-info,
-h2,
-h3 {
-  text-transform: uppercase;
-  white-space: nowrap;
-  font-family: 'Novecentos', sans-serif; }
 
 .product-info .container {
   margin-left: 60px;
