--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -66,3 +66,49 @@ table {
     margin: 0 0 $base__space-unit;
     width: 100%;
 }
+
+//elements in journal page********************************
+.black-btn {
+    border: 1px solid #000;
+    color: #000;
+    padding: 12px 18px;
+}
+
+a.read-more.black-btn {
+    color: #000;
+    font-family: 'Novecento', sans-serif;
+    text-transform: uppercase;
+    font-size: .9rem;
+}
+
+.blog {
+    .entry-meta {
+        background: $color__green-brand;
+        color: $color__background-body;
+        text-transform: uppercase;
+        max-width: 360px;
+        font-family: 'Novecento', sans-serif;
+        position: absolute;
+    }
+    .entry-title {
+        font-family: 'Merriweather', serif;
+    }
+    img {
+        height: auto;
+        max-width: 100%;
+    }
+    .entry-header h2 {
+        background: $color__green-brand;
+        font-family: 'Novecento', sans-serif;
+        letter-spacing: 2px;
+        margin-top: 2.25rem;
+        max-width: 40%;
+        padding: .75rem 1.5rem;
+        position: absolute;
+        & a:hover {
+            color: $color__yellow-brand;
+        }
+    }
+}
+
+//elements in journal page***************************
