--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -399,6 +399,43 @@ table {
   margin: 0 0 1.5rem;
   width: 100%; }
 
+.black-btn {
+  border: 1px solid #000;
+  color: #000;
+  padding: 12px 18px; }
+
+a.read-more.black-btn {
+  color: #000;
+  font-family: 'Novecento', sans-serif;
+  text-transform: uppercase;
+  font-size: .9rem; }
+
+.blog .entry-meta {
+  background: #248A83;
+  color: #fff;
+  text-transform: uppercase;
+  max-width: 360px;
+  font-family: 'Novecento', sans-serif;
+  position: absolute; }
+
+.blog .entry-title {
+  font-family: 'Merriweather', serif; }
+
+.blog img {
+  height: auto;
+  max-width: 100%; }
+
+.blog .entry-header h2 {
+  background: #248A83;
+  font-family: 'Novecento', sans-serif;
+  letter-spacing: 2px;
+  margin-top: 2.25rem;
+  max-width: 40%;
+  padding: .75rem 1.5rem;
+  position: absolute; }
+  .blog .entry-header h2 a:hover {
+    color: #f0e4d1; }
+
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
@@ -763,20 +800,6 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.archive .content-area,
-.blog .content-area {
-  width: 74%;
-  display: inline-block;
-  border-right: solid 1px black;
-  background: #d4f7cb; }
-
-.archive .widget-area,
-.blog .widget-area {
-  width: 25%;
-  display: inline-block;
-  vertical-align: top;
-  background: #aad2f3; }
-
 .site-main .content-whole {
   margin-left: auto;
   margin-right: auto;
@@ -803,6 +826,47 @@ object {
   #post-23 .entry-content h2 {
     text-align: center;
     font-size: 2rem; }
+
+.prim-second-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1120px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-gap: 1rem;
+  background: #d4f7cb; }
+  .prim-second-wrapper #primary .entry-content {
+    width: 640px; }
+
+.products-grid-wrapper {
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-template-columns: 260px 260px 260px 260px;
+  grid-template-rows: 260px 260px 260px 260px;
+  grid-gap: 1.5rem;
+  margin-bottom: 4rem; }
+  .products-grid-wrapper .type-product {
+    border: 1px solid #e1e1e1;
+    background-color: #e1e1e1;
+    height: 250px;
+    overflow: hidden;
+    position: relative; }
+  .products-grid-wrapper .type-product img {
+    -o-object-fit: cover;
+       object-fit: cover; }
+
+.page-header {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0;
+  position: relative;
+  top: 55%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
 
 .copy-right {
   position: relative;
