--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -372,12 +372,6 @@ q {
   q:after {
     content: ""; }
 
-hr {
-  background-color: #ccc;
-  border: 0;
-  height: 1px;
-  margin-bottom: 1.5rem; }
-
 ul,
 ol {
   margin-left: 0px;
@@ -401,7 +395,6 @@ table {
 
 .black-btn {
   border: 1px solid #000;
-  color: #000;
   padding: 12px 18px; }
 
 a.read-more.black-btn {
@@ -409,6 +402,10 @@ a.read-more.black-btn {
   font-family: 'Novecento', sans-serif;
   text-transform: uppercase;
   font-size: .9rem; }
+  a.read-more.black-btn:hover {
+    color: #fff;
+    background: #248A83;
+    border: 1px solid #248A83; }
 
 .blog .entry-meta {
   background: #248A83;
@@ -435,6 +432,16 @@ a.read-more.black-btn {
   position: absolute; }
   .blog .entry-header h2 a:hover {
     color: #f0e4d1; }
+
+.search h1.page-title {
+  color: #404040;
+  font-size: 2.3rem;
+  margin-top: 100px;
+  border-bottom: 1px solid #ccc; }
+
+.search div.entry-summary {
+  font-family: 'Merriweather', serif;
+  padding-right: 66px; }
 
 /*--------------------------------------------------------------
 # Forms
@@ -653,8 +660,27 @@ a {
     max-width: 100%; }
 
 /* Search widget. */
+.content-area {
+  border-right: 1px solid #ccc;
+  padding-right: 5%;
+  width: 90%; }
+
 .widget_search .search-submit {
   display: none; }
+
+.search .widget-area {
+  padding-left: 70px; }
+
+#custom_html-2 .widget-title {
+  margin-top: 95px; }
+
+.custom-html-widget h2 {
+  font-size: .9rem; }
+
+.search-pagination {
+  margin-top: 6rem;
+  margin-bottom: 4rem;
+  border-top: 1px solid #ccc; }
 
 /*--------------------------------------------------------------
 # Content
@@ -828,15 +854,12 @@ object {
     font-size: 2rem; }
 
 .prim-second-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1120px;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-gap: 1rem;
-  background: #d4f7cb; }
-  .prim-second-wrapper #primary .entry-content {
-    width: 640px; }
+  width: 1120px; }
 
 .products-grid-wrapper {
   display: grid;
